--- a/WatchExtension/Info.plist
+++ b/WatchExtension/Info.plist
@@ -14,8 +14,10 @@
     <string>$(MARKETING_VERSION)</string>
     <key>CFBundleVersion</key>
     <string>$(CURRENT_PROJECT_VERSION)</string>
-    <key>NSHealthShareUsageDescription</key>
-    <string>운동 중 심박을 표시하기 위해 심박 데이터를 사용합니다.</string>
+	<key>NSHealthShareUsageDescription</key>
+	<string>운동 중 심박을 표시하기 위해 심박 데이터를 사용합니다.</string>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>운동 기록을 저장하기 위해 운동 데이터를 사용합니다.</string>
     <key>NSExtension</key>
     <dict>
         <key>NSExtensionAttributes</key>
