Ignore build artifacts and portfolio pptx

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,18 @@
 .idea/
 *.xcuserdatad/
 xcuserdata/
+DerivedData/
+build/
+*.xcarchive
+*.ipa
+*.dSYM
+*.dSYM.zip
+*.p12
+*.p8
+*.pem
+*.key
+*.cer
+*.crt
+*.mobileprovision
+.swiftpm/
+HIIT_Timer_Portfolio.pptx
